--- a/frontend/src/Explorer/View/header.css
+++ b/frontend/src/Explorer/View/header.css
@@ -26,7 +26,7 @@
     height: var(--height-header-top-mobile);
 
     .logo__container {
-      lost-column: 2/12;
+      lost-column: 2.5/12;
       height: var(--height-header-top-mobile);
     }
 
@@ -45,6 +45,8 @@
       width: 39px;
       height: 36px;
       box-item: center;
+      background-repeat: no-repeat;
+      background-position: center center;
     }
 
     @media (--md) {
@@ -61,7 +63,7 @@
     @media (--md) {
       .nav__container  {
         @extend .show;
-        lost-column: 8/12;
+        lost-column: 7/12;
         height: var(--height-header-top);
         text-align: center;
       }
@@ -74,7 +76,7 @@
     @media (--md) {
       .currency__container  {
         @extend .show;
-        lost-column: 2/12 3;
+        lost-column: 2.5/12 3;
         height: var(--height-header-top);
         text-align: right;
       }
@@ -82,12 +84,15 @@
 
     .title__container {
       @extend .show;
-      lost-column: 8/12;
+      lost-column: 7/12;
       line-height: var(--height-header-top-mobile);
       text-align: center;
       font-family: var(--fontFamily0-Light);
       font-size: 15px;
       color: var(--color0);
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     @media (--md) {
@@ -97,7 +102,7 @@
     }
 
     .hamburger__container {
-      lost-column: 2/12;
+      lost-column: 2.5/12;
       height: var(--height-header-top-mobile);
       box: horizontal right;
     }
